# MF-Quality-IP

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/ai/: __init__.py  investigation_summary.py  providers.py  schemas.py
backend/app/db/: __init__.py  seed.py
backend/app/routers/: alerts.py  defects.py  domain.py  health.py  investigations.py  search.py
backend/app/search/: __init__.py  client.py  indexer.py  reindex.py  schemas.py  service.py
backend/manufacturing_quality_intelligence_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_create_domain_tables.py  0002_update_quality_workflow_tables.py  0003_add_event_ingestion_columns.py  0004_add_investigation_ai_summary.py
backend/tests/: conftest.py  test_ai_investigation_summary.py  test_database.py  test_health.py  test_models.py  test_quality_workflows.py  test_search_api.py  test_search_indexer.py  test_search_service.py  test_seed_and_domain_api.py
event-generator/: .dockerignore  Dockerfile  pyproject.toml
event-generator/app/: __init__.py  main.py
event-generator/app/generators/: __init__.py  defects.py  scenarios.py  sensor_readings.py  station_events.py
event-generator/app/producers/: __init__.py  kafka_producer.py
event-generator/app/schemas/: __init__.py  events.py
event-generator/app/services/: __init__.py  event_publisher.py
event-generator/app/tests/: __init__.py  test_deterministic_generation.py  test_event_schemas.py  test_mock_producer.py  test_publish_cli.py  test_random_generation.py  test_topic_routing.py
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/app/: __init__.py  main.py
worker/app/consumers/: __init__.py  (+4 more)
(+115 files in other folders)
