[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-quality-worker"
version = "0.6.0"
description = "Redpanda/Kafka worker for manufacturing quality event persistence."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "kafka-python-ng>=2.2,<3",
    "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-q"
